infra/modules/ec2/main.tf
resource "aws_instance" "bastion" {
  ami           = var.ami
  instance_type = "t3.micro"

  subnet_id                   = var.public_subnet_id
  associate_public_ip_address = true

  vpc_security_group_ids = [aws_security_group.bastion_sg.id]
  key_name               = var.key_name

  user_data = templatefile("${path.module}/user_data.sh", {
    rds_host    = split(":", var.rds_endpoint)[0]
    db_user     = var.db_username
    db_password = var.db_password
    db_name     = var.db_name
  init_sql    = file("${path.module}/init.sql")
  })

  tags = {
    Name = var.name
  }
}
